datasets/dataset_txt/mitmproxy/mitmproxy_1544.txt
curt2008 commented on 16 Jan 2015
Downloading/unpacking git+https://github.com/mitmproxy/mitmproxy.git
  Cloning https://github.com/mitmproxy/mitmproxy.git to /tmp/pip-ClgJaI-build
  Running setup.py (path:/tmp/pip-ClgJaI-build/setup.py) egg_info for package from git+https://github.com/mitmproxy/mitmproxy.git
    Traceback (most recent call last):
      File "<string>", line 17, in <module>
      File "/tmp/pip-ClgJaI-build/setup.py", line 19
        "netlib>=%s, <%s" % (version.MINORVERSION, version.NEXT_MINORVERSION),
                                                                             ^
    SyntaxError: invalid syntax
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):

  File "<string>", line 17, in <module>

  File "/tmp/pip-ClgJaI-build/setup.py", line 19

    "netlib>=%s, <%s" % (version.MINORVERSION, version.NEXT_MINORVERSION),

                                                                         ^

SyntaxError: invalid syntax
What's the reason why this won't install? here's my report when running pip install git+https://github.com/mitmproxy/netlib.git
  Requirement already satisfied (use --upgrade to upgrade): netlib==0.11.2 from git+https://github.com/mitmproxy/netlib.git in /usr/lib/python2.6/site-packages
Requirement already satisfied (use --upgrade to upgrade): pyasn1>=0.1.7 in /usr/lib/python2.6/site-packages (from netlib==0.11.2)
Requirement already satisfied (use --upgrade to upgrade): pyOpenSSL>=0.14 in /usr/lib/python2.6/site-packages (from netlib==0.11.2)
Requirement already satisfied (use --upgrade to upgrade): passlib>=1.6.2 in /usr/lib/python2.6/site-packages (from netlib==0.11.2)
Requirement already satisfied (use --upgrade to upgrade): cryptography>=0.2.1 in /usr/lib/python2.6/site-packages (from pyOpenSSL>=0.14->netlib==0.11.2)
Requirement already satisfied (use --upgrade to upgrade): six>=1.5.2 in /usr/lib/python2.6/site-packages/six-1.8.0-py2.6.egg (from pyOpenSSL>=0.14->netlib==0.11.2)
Requirement already satisfied (use --upgrade to upgrade): cffi>=0.8 in /usr/lib/python2.6/site-packages (from cryptography>=0.2.1->pyOpenSSL>=0.14->netlib==0.11.2)
Requirement already satisfied (use --upgrade to upgrade): enum34 in /usr/lib/python2.6/site-packages (from cryptography>=0.2.1->pyOpenSSL>=0.14->netlib==0.11.2)
Requirement already satisfied (use --upgrade to upgrade): setuptools in /usr/lib/python2.6/site-packages (from cryptography>=0.2.1->pyOpenSSL>=0.14->netlib==0.11.2)
Requirement already satisfied (use --upgrade to upgrade): pycparser in /usr/lib/python2.6/site-packages (from cffi>=0.8->cryptography>=0.2.1->pyOpenSSL>=0.14->netlib==0.11.2)
Requirement already satisfied (use --upgrade to upgrade): ordereddict in /usr/lib/python2.6/site-packages (from enum34->cryptography>=0.2.1->pyOpenSSL>=0.14->netlib==0.11.2)
Cleaning up...